fixed menu/cantina overlapping bug

--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,13 @@ General Menu Styles
 .menu-colorful-bg{
   background-color: pink;
   width: 100vw;
-  height: 1794px;
+  /* height: 1794px; */
   margin-top: 20px;
 }
 .menu-bg{
     width: 1080px;
-    height:auto;
-    height: 2000px;
+    /* height:auto; */
+    /* height: 2000px; */
     background-color: #ffffff;
     margin: 0 auto;
     /* margin-top: 30px; */
